@@ -7,6 +7,7 @@ import lombok.RequiredArgsConstructor;
 import no.nav.dolly.bestilling.aareg.ArbeidsforholdServiceConsumer;
 import no.nav.dolly.bestilling.aareg.domain.ArbeidsforholdResponse;
 import no.nav.dolly.bestilling.inntektstub.InntektstubConsumer;
+import no.nav.dolly.bestilling.inntektstub.domain.Inntektsinformasjon;
 import no.nav.dolly.bestilling.inntektstub.domain.ValiderInntekt;
 import no.nav.dolly.bestilling.pensjonforvalter.PensjonforvalterConsumer;
 import no.nav.dolly.bestilling.skjermingsregister.SkjermingsRegisterConsumer;
@@ -22,11 +23,13 @@ import no.nav.dolly.consumer.kodeverk.KodeverkConsumer;
 import no.nav.dolly.consumer.kodeverk.KodeverkMapper;
 import no.nav.dolly.consumer.kodeverk.domain.KodeverkBetydningerResponse;
 import no.nav.dolly.consumer.pdlperson.PdlPersonConsumer;
+import no.nav.dolly.consumer.pdlperson.PdlPersonConsumer.PDL_MILJOER;
 import no.nav.dolly.consumer.profil.ProfilApiConsumer;
 import no.nav.dolly.domain.PdlPerson.Navn;
 import no.nav.dolly.domain.PdlPersonBolk;
 import no.nav.dolly.domain.resultset.SystemTyper;
 import no.nav.dolly.domain.resultset.kodeverk.KodeverkAdjusted;
+import no.nav.dolly.exceptions.NotFoundException;
 import no.nav.dolly.service.InntektsmeldingEnumService;
 import no.nav.dolly.service.InntektsmeldingEnumService.EnumTypes;
 import no.nav.dolly.service.RsTransaksjonMapping;
@@ -43,12 +46,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import static java.util.Arrays.asList;
+import static java.lang.String.format;
+import static java.util.Objects.nonNull;
 import static no.nav.dolly.config.CachingConfig.CACHE_KODEVERK;
 
 @RestController
@@ -89,8 +93,9 @@ public class OppslagController {
 
     @GetMapping("/pdlperson/ident/{ident}")
     @Operation(description = "Hent person tilhørende ident fra pdlperson")
-    public JsonNode pdlPerson(@PathVariable("ident") String ident) {
-        return pdlPersonConsumer.getPdlPerson(ident);
+    public JsonNode pdlPerson(@PathVariable("ident") String ident,
+                              @RequestParam(value = "pdlMiljoe", required = false, defaultValue = "Q2") PDL_MILJOER pdlMiljoe) {
+        return pdlPersonConsumer.getPdlPerson(ident, pdlMiljoe);
     }
 
     @GetMapping("/pdlperson/identer")
@@ -100,33 +105,38 @@ public class OppslagController {
                 .collectList()
                 .block();
 
-        return !personer.isEmpty() ? personer.get(0) : null;
+        return nonNull(personer) && !personer.isEmpty() ? personer.get(0) : null;
     }
 
     @GetMapping("/inntektstub/{ident}")
     @Operation(description = "Hent inntekter tilhørende ident fra Inntektstub")
-    public ResponseEntity inntektstub(@PathVariable String ident) {
+    public ResponseEntity<List<Inntektsinformasjon>> inntektstub(@PathVariable String ident) {
         return inntektstubConsumer.getInntekter(ident);
     }
 
     @PostMapping("/inntektstub")
     @Operation(description = "Valider inntekt mot Inntektstub")
-    public ResponseEntity inntektstub(@RequestBody ValiderInntekt validerInntekt) {
+    public ResponseEntity<Object> inntektstub(@RequestBody ValiderInntekt validerInntekt) {
         return inntektstubConsumer.validerInntekter(validerInntekt);
     }
 
     @GetMapping("/systemer")
     @Operation(description = "Hent liste med systemer og deres beskrivelser")
     public List<SystemTyper.SystemBeskrivelse> getSystemTyper() {
-        return asList(SystemTyper.values()).stream()
+        return Arrays.stream(SystemTyper.values())
                 .map(type -> SystemTyper.SystemBeskrivelse.builder().system(type.name()).beskrivelse(type.getBeskrivelse()).build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/skjerming/{ident}")
     @Operation(description = "Hent skjerming på ident")
     public SkjermingsDataResponse getSkjerming(@PathVariable String ident) {
-        return skjermingsRegisterConsumer.getSkjerming(ident);
+
+        var response = skjermingsRegisterConsumer.getSkjerming(ident);
+        if (response.isEksistererIkke()) {
+            throw new NotFoundException(format("Skjerming for ident %s ble ikke funnet", ident));
+        }
+        return response;
     }
 
     @GetMapping("/udistub/{ident}")
@@ -143,13 +153,13 @@ public class OppslagController {
 
     @GetMapping("/fastedatasett/{datasettype}")
     @Operation(description = "Hent faste datasett med beskrivelser")
-    public ResponseEntity getFasteDatasett(@PathVariable DatasettType datasettype) {
+    public ResponseEntity<JsonNode> getFasteDatasett(@PathVariable DatasettType datasettype) {
         return fasteDatasettConsumer.hentDatasett(datasettype);
     }
 
     @GetMapping("/fastedatasett/tps/{gruppe}")
     @Operation(description = "Hent faste datasett gruppe med beskrivelser")
-    public ResponseEntity getFasteDatasettGruppe(@PathVariable String gruppe) {
+    public ResponseEntity<JsonNode> getFasteDatasettGruppe(@PathVariable String gruppe) {
         return fasteDatasettConsumer.hentDatasettGruppe(gruppe);
     }
 
@@ -161,7 +171,7 @@ public class OppslagController {
 
     @GetMapping("/orgnummer")
     @Operation(description = "Hent faste orgnummer")
-    public ResponseEntity getOrgnummer() {
+    public ResponseEntity<JsonNode> getOrgnummer() {
         return fasteDatasettConsumer.hentOrgnummer();
     }
 
