@@ -5,7 +5,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.registre.sdforvalter.database.model.AaregModel;
 import no.nav.registre.sdforvalter.database.repository.AaregRepository;
@@ -29,7 +28,7 @@ public class AaregAdapter extends FasteDataAdapter {
     public AaregListe fetchBy(String gruppe) {
         log.info("Henter aaregdata med gruppe {}", gruppe);
         List<AaregModel> aaregModels = repository.findByGruppeModel(getGruppe(gruppe));
-        List<Aareg> liste = aaregModels.stream().map(Aareg::new).collect(Collectors.toList());
+        List<Aareg> liste = aaregModels.stream().map(Aareg::new).toList();
 
         log.info("Fant {} aareg-personer fra gruppe {}", liste.size(), gruppe);
         return new AaregListe(liste);
@@ -43,7 +42,7 @@ public class AaregAdapter extends FasteDataAdapter {
         return new AaregListe(repository.saveAll(list
                 .stream()
                 .map(aareg -> new AaregModel(aareg, getOppinnelse(aareg), getGruppe(aareg)))
-                .collect(Collectors.toList()))
+                .toList())
         );
     }
 }
