@@ -12,9 +12,6 @@ import no.nav.registre.sdforvalter.domain.TpsIdentListe;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.util.Set;
-import java.util.stream.Collectors;
-
 @Service
 @Slf4j
 public class IdentService {
@@ -45,13 +42,12 @@ public class IdentService {
 
     public void send(String environment, String gruppe) {
         TpsIdentListe liste = tpsIdenterAdapter.fetchBy(gruppe);
-        Set<String> exisistingFnrs = hodejegerenConsumer.getPlaygroupFnrs(staticDataPlaygroup);
-        TpsIdentListe identer = new TpsIdentListe(liste
+        var exisistingFnrs = hodejegerenConsumer.getPlaygroupFnrs(staticDataPlaygroup);
+        var identer = new TpsIdentListe(liste
                 .stream()
                 .filter(item -> !exisistingFnrs.contains(item.getFnr()))
-                .collect(Collectors.toList())
+                .toList()
         );
-//        skdConsumer.createTpsIdenterMessagesInGroup(identer, staticDataPlaygroup);
         skdConsumer.send(staticDataPlaygroup, environment);
 
         //Person får ikke aktør-id automatisk ved opprettelse i TPS lenger. Må opprettes i PDL også for å få aktør-id
@@ -62,7 +58,7 @@ public class IdentService {
           Some methods may fail if at the very least TPS-ident (SKD) have not been created.
           TP and SAM are also critical databases for the fag applications
         */
-        Set<String> livingFnrs = hodejegerenConsumer.getLivingFnrs(staticDataPlaygroup, environment);
+        var livingFnrs = hodejegerenConsumer.getLivingFnrs(staticDataPlaygroup, environment);
         tpConsumer.send(livingFnrs, environment);
     }
 
@@ -96,7 +92,7 @@ public class IdentService {
             } else {
                 return ident;
             }
-        }).collect(Collectors.toList());
+        }).toList();
         return new TpsIdentListe(tpsIdentListe);
     }
 }
